<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_bulletin"
            android:icon="@drawable/ic_question_answer"
            android:title="@string/bulletin" />
        <item
            android:id="@+id/nav_supl"
            android:icon="@drawable/ic_school"
            android:title="@string/supl" />
        <item
            android:id="@+id/nav_schedule_class"
            android:icon="@drawable/ic_event"
            android:title="@string/schedule_class" />
        <item
            android:id="@+id/nav_schedule_all"
            android:icon="@drawable/ic_date_range"
            android:title="@string/schedule_all" />
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_assessment"
            android:title="@string/grades" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_clear"
            android:title="@string/logout" />


</menu>
